welcome.lessons.welcome.bat.bool1.LoneTeen.scala.error
loneTeen:2: error: ')' expected but 'return' found.
	if ((a<=19 && a>=13 && (b<13 || b>19)) || (b<=19 && b>=13 && (a<13 || a>19)) return true;
                                                                                     ^